3/27 attempt